outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-24_14-22-01/evaluations/problem_eval-1689673782521719137_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric combining centrality, connectivity, and potential path quality, applies adaptive bonuses for high-importance nodes when few options remain, and uses a distance-to-destination penalty to guide the path toward the destination more effectively.}
              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric combining centrality, connectivity, and potential path quality, applies adaptive bonuses for high-importance nodes when few options remain, and uses a distance-to-destination penalty to guide the path toward the destination more effectively.}
              ^
SyntaxError: unterminated string literal (detected at line 1)
